# tibet-core

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC.md  pyproject.toml
cbind/: test  test.c
cbind/include/: tibet.h
python/tibet/: __init__.py
src/: lib.rs
