[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "tibet-core"
version = "0.1.1"
description = "TIBET: Transaction/Interaction-Based Evidence Trail - The Linux of AI Provenance"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Jasper van de Meent", email = "jasper@humotica.nl"},
    {name = "Root AI", email = "root_idd@humotica.nl"}
]
keywords = ["provenance", "audit", "ai", "trust", "6g", "tibet", "ietf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://humotica.com"
Repository = "https://github.com/jaspertvdm/tibet-core"
Documentation = "https://datatracker.ietf.org/doc/draft-vandemeent-tibet-provenance/"
"IETF Draft" = "https://datatracker.ietf.org/doc/draft-vandemeent-tibet-provenance/"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "tibet_core"
